<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrationActivity">
    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="@dimen/size_15dp"
        android:textSize="@dimen/size_24dp"
        android:padding="@dimen/size_5dp"
        android:fontFamily="@font/agencyfbbold"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:text="@string/registration_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/course_background"
        android:layout_marginTop="@dimen/size_90dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="@dimen/size_20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/registr_text"
            android:textColor="@color/white"
            android:layout_marginTop="@dimen/size_40dp"
            android:layout_marginLeft="@dimen/size_40dp"
            android:layout_marginRight="@dimen/size_40dp"
            android:gravity="center"
            android:textSize="@dimen/text_18sp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/registr2_text"
            android:textColor="@color/white"
            android:layout_marginTop="@dimen/size_15dp"
            android:layout_marginLeft="@dimen/size_40dp"
            android:layout_marginRight="@dimen/size_40dp"
            android:gravity="center"
            android:textSize="@dimen/text_18sp"/>
        <EditText
            android:id="@+id/edt_Ism"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_40dp"
            android:layout_marginTop="@dimen/size_75dp"
            android:gravity="center"
            android:background="#04567e"
            android:hint="Ism"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:maxEms="12"
            />
        <EditText
            android:id="@+id/edt_phone_raqam"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_40dp"
            android:layout_marginTop="@dimen/size_15dp"
            android:gravity="center"
            android:hint="Telefon raqam"
            android:textColorHint="@color/white"
            android:background="#04567e"
            android:textColor="@color/white"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_40dp"
            android:text="Kirish"
            android:onClick="RegistrBtn"
            android:textColor="@color/white"
            android:background="@color/orange"
            android:layout_marginTop="@dimen/size_40dp"
            android:fontFamily="@font/agencyfbbold"
            android:textStyle="bold"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>