<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background"
    android:padding="20dp"
    android:orientation="vertical"
    tools:context=".MainActivity">

      <androidx.constraintlayout.widget.ConstraintLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent">

          <androidx.cardview.widget.CardView
              android:id="@+id/card_view"
              android:layout_width="match_parent"
              android:layout_height="180dp"
              app:cardCornerRadius="25dp"
              app:layout_constraintBottom_toBottomOf="parent"
              app:layout_constraintEnd_toEndOf="parent"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintTop_toTopOf="parent"
              app:layout_constraintVertical_bias="0.0">

              <VideoView
                  android:id="@+id/videoView"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  app:layout_constraintTop_toTopOf="parent" />

          </androidx.cardview.widget.CardView>

            <!--     Pullik Kurslar     -->
          <LinearLayout
              android:id="@+id/linearLayout"
              android:layout_width="match_parent"
              android:layout_height="@dimen/size_60dp"
              android:orientation="horizontal"
              android:layout_marginTop="@dimen/text_10sp"
              app:layout_constraintBottom_toBottomOf="parent"
              app:layout_constraintEnd_toEndOf="parent"
              app:layout_constraintHorizontal_bias="0.6"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintTop_toBottomOf="@+id/card_view"
              app:layout_constraintVertical_bias="0.008">

              <Button
                  android:id="@+id/button_login"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginRight="@dimen/size_15dp"
                  android:layout_weight="1"
                  android:background="@drawable/register_button"
                  android:fontFamily="@font/agencyfbbold"
                  android:text="@string/Login_title"
                  android:textAllCaps="false"
                  android:textColor="@color/white"
                  android:textSize="18sp" />

              <Button
                  android:id="@+id/button_registration"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginLeft="@dimen/size_15dp"
                  android:layout_weight="1"
                  android:background="@drawable/register_button"
                  android:fontFamily="@font/agencyfbbold"
                  android:text="@string/registration_title"
                  android:textAllCaps="false"
                  android:textColor="@color/white"
                  android:textSize="18sp" />
          </LinearLayout>

          <LinearLayout
              android:id="@+id/main_courses"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              app:layout_constraintBottom_toBottomOf="parent"
              app:layout_constraintEnd_toEndOf="parent"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintTop_toBottomOf="@+id/linearLayout"
              app:layout_constraintVertical_bias="0.0">

              <TextView
                  android:id="@+id/courses_title"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:layout_marginTop="10dp"
                  android:layout_marginBottom="10dp"
                  android:fontFamily="@font/agencyfbbold"
                  android:gravity="center"
                  android:text="@string/courses_title"
                  android:textAllCaps="false"
                  android:textColor="@color/white"
                  android:textSize="@dimen/text_20sp" />

              <androidx.recyclerview.widget.RecyclerView
                  android:id="@+id/coursesRecyclerView"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:layout_marginTop="10dp"
                  tools:listitem="@layout/courses_list" />

          </LinearLayout>

          <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              app:layout_constraintBottom_toBottomOf="parent"
              app:layout_constraintEnd_toEndOf="parent"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintTop_toBottomOf="@+id/main_courses">

              <TextView
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:layout_marginTop="@dimen/size_40dp"
                  android:layout_marginBottom="0dp"
                  android:fontFamily="@font/agencyfbbold"
                  android:gravity="center"
                  android:text="@string/motivation_videos_title"
                  android:textAllCaps="false"
                  android:textColor="@color/white"
                  android:textSize="@dimen/text_20sp" />

              <androidx.recyclerview.widget.RecyclerView
                  android:id="@+id/motivationVideosRecyclerView"
                  android:layout_width="match_parent"
                  tools:listitem="@layout/motivation_videos_list"
                  android:layout_height="match_parent"
                  android:layout_marginTop="@dimen/size_10dp" />

          </LinearLayout>

      </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.core.widget.NestedScrollView>
